--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "feedparser":"~0.19.2",
         "redis":"~0.10.1",
         "node-red": "0.x",
-        "node-red-playground":"*",
         "node-red-bluemix-nodes":"1.x",
         "node-red-node-watson":"0.x",
         "node-red-node-openwhisk":"0.x",
@@ -18,6 +17,11 @@
         "node-red-contrib-bluemix-hdfs":"0.x",
         "node-red-nodes-cf-sqldb-dashdb":"0.x"
     },
+    "node-red": {
+        "nodes": {
+            "sample": "playground.js"
+        }
+    }
     "engines": {
         "node": "0.12.x"
     }
