--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
         "node-red-contrib-scx-ibmiotapp":"0.x",
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
-        "node-red-nodes-cf-sqldb-dashdb":"0.x"
-    },
-    "node-red": {
-        "nodes": {
-            "sample": "playground.js"
-        }
+        "node-red-nodes-cf-sqldb-dashdb":"0.x",
+        "playground":"*"
     },
     "engines": {
         "node": "0.12.x"
