--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,6 @@
 applications:
 - memory: 512M
-  command: node --max-old-space-size=384 node_modules/node-red/red.js --settings ./bluemix-settings.js -v
+  command: node --max-old-space-size=384 app.js --settings ./bluemix-settings.js -v
   services:
   - sample-node-red-cloudantNoSQLDB
   env:
